tests/NormalTests/paczka1/fuzzy1/87750706.err
Error in line 6: Upw7y A687 2,7
Error in line 17: Upw7y A302 84,22
Error in line 15: QTs63 S867 23,3
Error in line 11: muaxDV2vR A302 27,0
